# Residue_Scanning_Pyrosetta

./: .flake8  .gitignore  BUILD_INFO.md  CLAUDE.md  CSV_FORMAT_GUIDE.md  DISTRIBUTION_GUIDE.md  DOCUMENTATION_INDEX.md  FIX_SUMMARY.md  README.md  RS_pyrosetta.yaml  env.yaml  pyproject.toml  rosetta_RS.py
.claude/memory/: MEMORY.md
residue_scanning/: cli.py  core.py  preprocessing.py
tests/: README.md  TESTING_GUIDE.md  TEST_SUITE.md  test_comprehensive.py
tests/csv/: input_csv.csv  manually_selected_4ZFO.csv  manually_selected_5JXE.csv
